Refactored service classes